@@ -77,10 +77,22 @@ my @issue47 = (
   [4,2,-1,951, "1 2 3"],
   [8,1,-1,47, "1 7 7"],
   [8,2,-1,47, "1 6 7"],
-  [5,1,-1,0, "0 2 4"],
-  [5,2,-1,0, "0 2 4"],
+  [5,1,-1,0, "0 2 1"],
+  [5,2,-1,0, "0 2 1"],
   [5,1,-1,66, "3 3 1"],
   [5,2,-1,66, "0 3 1"],
+  [1001,-4,4,50, "173 827 562"],
+  [1001,-4,7,50, "87 457 595"],
+  [1001,1,-1,50, "330 486 1"],
+  [5,1,-1,4, "3 2 1"],
+  [3,6,9,36, "0 0 0"],
+  [5,10,25,101, "0 0 0"],
+  [6,10,25,101, "5 4 1"],
+  [3,-6,9,0, "0 2 1"],
+  [1,30,1,15, "0 0 0"],
+  [3,3,3,1, "1 0 0"],
+  [3,-30,-30,1, "1 0 0"],
+  [1,9,5,0, "0 0 0"],      # Everything mod 1
 );
 
 plan tests => 0 + 2*scalar(@lucas_seqs) + 1 + 1 + scalar(@issue47);
